--- a/sample/src/main/res/values/colors.xml
+++ b/sample/src/main/res/values/colors.xml
@@ -20,4 +20,7 @@
 
     <color name="verification_failed_color">#30BDBDBD</color>
 
+    <color name="custom_active_step_color">#00ff00</color>
+    <color name="custom_inactive_step_color">#ff0000</color>
+    <color name="custom_bottom_navigation_background_color">#0000ff</color>
 </resources>
